[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "keithley-iv-suite"
version = "2.0.0"
description = "Master control panel for Keithley SMU IV characterization"
authors = [{name = "prashantUCSB"}]
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.0",
    "pyqtgraph>=0.13.7",
    "pyvisa>=1.14.1",
    "pyvisa-py>=0.7.2",
    "pyserial>=3.5",
    "pyusb>=1.2.1",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "PyYAML>=6.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
iv-suite = "keithley_iv_suite.__main__:main"
